login whitespace fix

--- a/static/styles/general.css
+++ b/static/styles/general.css
@@ -222,7 +222,8 @@ p {
     justify-content: center;
 }
 
-.vh-100 {
+body.login,
+html.login {
     background-color: var(--sign-in-bg);
 }
 
